@@ -59,6 +59,7 @@ wxMSW:
 - Add wxEnhMetaFile::Detach() (Luca Bacci).
 - Add support for saving 256*256 32bpp ICOs in PNG format (Artur Wieczorek).
 - Keep menu item icon after removing and adding it back (Artur Wieczorek).
+- Add wxThread::MSWGetHandle() (troelsk).
 
 wxOSX/Cocoa:
 
